# nfNative

./: .gitignore  .gitmodules  BoardDefinition.cs  CMakeLists.txt  DebugWireProtocol.md  Memory.md  Pressure.html  Readme_TODO.md  Startup.plantuml  nfNative.sln  nfNative1.sln  nfNative2.sln  postbuild.bat
Azure-RTOS/: Azure-RTOS.vcxitems  Azure-RTOS.vcxitems.filters
Documents/: CLR_Memory.xlsx  Memory.md  Readme.md  t.c
Documents/NetMF_USB/: USB_decl.h
Documents/NetMF_WP/: WireProtocol.h
Documents/Notes/: How to add and update Git Submodules.md  RandomNotes.md  STM32H7B-7A native code setup for nanoFramework.md  Setup.md  nanoFrameworkArchitecture.grl  postbuild.bat
Documents/STM32/: STM32H7 DMA not working.docx
Documents/TempStore/: USART.h
Documents/WireProtocol/: WireProtocol_App_Interface.c  wpUSART_Communications.c  wpUSART_Communications.h
LcdDmaTest/: LcdDmaTest-Debug.vgdbsettings  LcdDmaTest-Release.vgdbsettings  LcdDmaTest.vcxproj  LcdDmaTest.vcxproj.filters  stm32.props  stm32.xml
PicoSDKProject1/: CMakeLists.txt  PicoSDKProject1.vgdbproj  dev_lowlevel.c
Related Documents/: SensorTypes.md  Setup.md  StmDocuments.md  nanoCLRGraphics.md
STM32CubeH7/: STM32CubeH7.vcxitems  STM32CubeH7.vcxitems.filters
SharedCode/: .clang-format
SharedCode/ChibiOS/: ChibiOS.vcxitems  (+1 more)
TemporaryCode/: TemporaryCode.vcxitems  TemporaryCode.vcxitems.filters
_Tools and Related Documents/: Cortex-M Hard Fault.md  Optimising.md  Setup.md
fatfs/: fatfs.vcxitems  fatfs.vcxitems.filters
nf-interpreter/: nf-interpreter.vcxitems  nf-interpreter.vcxitems.filters
(+1154 files in other folders)
